--- a/index.html
+++ b/index.html
@@ -2,11 +2,113 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Challenge_CSS15</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Challenge_CSS15 : SPOT</title>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" >
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
 
 <body>
+    <header>
+    <!-- Navbar -->
+    <div class="navbar">
+          <ul class="navbar-nav">
+            <a class="navbar-header" href="#">SP<i class="fa fa-circle"></i>T</a>
+            <li class="active"><a href="index.html">HOME</a></li>
+            <li><a href="index.html">ABOUT</a></li>
+            <li><a href="index.html">SERVICES</a></li>
+            <li><a href="index.html">WORKS</a></li>
+            <li><i class="fa fa-envelope-o"></i></li>
+          </ul>
+      </div>
+    </header>
 
-</body>
+	<div id="headerwrap">
+			<div class="row centered">
+				<div>
+				    <h1>It Doesn't Take a <br> Rocket <b>Scientist</b></h1>
+				    <h2>It Takes a Designer</h2>
+				</div>
+			</div><!-- row -->
+	</div><!-- headerwrap -->
+
+	<div class="container">
+		<div class="icon centered ">
+				<i class="fa fa-heart" aria-hidden="true"></i>
+				<h3>DESIGN</h3>
+				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+        </div><!-- icon centered-->
+
+			<div class="icon centered">
+				<i class="fa fa-laptop" aria-hidden="true"></i>
+				<h3>BOOTSTRAP</h3>
+				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+			</div><!-- icon centered -->
+
+			<div class="icon centered ">
+				<i class="fa fa-trophy" aria-hidden="true"></i>
+				<h3>SUPPORT</h3>
+				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+			</div><!--icon centered -->
+	</div><!-- container -->
+
+
+	<!-- PORTFOLIO SECTION -->
+	<div id="dg">
+		<div class="container2">
+			<div class="item centered">
+				<h3>LATEST WORKS</h3>
+                    <div class="img-tel">
+                        <div class="img-p01"><a href="#"><img src="css/img/p01.png" alt=""></a></div>			
+                        <div class="img-p02"><a href="#"><img src="css/img/p03.png" alt=""></a></div>
+                        <div class="img-p03"><a href="#"><img src="css/img/p02.png" alt=""></a></div>
+                    </div>
+			</div><!-- item centered-->
+		</div><!-- container -->
+	</div><!-- DG -->
+
+
+	<!-- web -->
+	<div class="container wb">
+		<div class="row centered">
+				<h3>WE CREATE FIRST CLASS DESIGN</h3>
+				<p>By being true to the brand we represent, we elevate the audiences’ relationship to it. Like becomes love becomes a passion. Passion <br>becomes advocacy. And we see the brand blossom from within, creating a whole story the audience embraces. That’s when the brand<br>can truly flex its muscles.</p>
+			<div>
+				<img class="img-responsive" src="css/img/mac.png">
+			</div>
+		</div><!-- row -->
+	</div><!-- container -->
+
+
+	<div id="clients">
+			<div class="row centered">
+				<h3>OUR AWESOME CLIENTS</h3>
+				<div class="client-img">
+					<img src="css/img/logo01.gif" alt="">
+					<img src="css/img/logo02.gif" alt="">
+					<img src="css/img/logo03.gif" alt="">
+					<img src="css/img/logo04.gif" alt="">
+					<img src="css/img/logo05.gif" alt="">
+				</div>
+			</div><!-- row -->
+	</div><!-- clients -->
+	
+	
+	<div id="txt">
+				<h3>WE ARE STORYTELLERS. BRANDS ARE OUR SUBJECTS. DESIGN IS OUR VOICE.</h3>
+				<p>We believe ideas come from everyone, everywhere. At BlackTie, everyone within our agency walls is a <br> designer in their own right. And there are a few principles we believe—and we believe everyone should <br>believe—about our design craft. These truths drive us, motivate us, and ultimately help us redefine the power <br>of design.</p>
+    </div>
+	
+	<!-- FOOTER -->
+<footer>
+	<div id="footer-icons">
+				<a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-dribbble"></i></a>	
+	</div><!-- Footer -->
+</footer>
+  </body>
+
 </html>
